# BlueHood

./: LICENSE  README.md  desktop.ini
BlueHood app/: package-lock.json  package.json
BlueHood app/public/: app.d.ts  app.js  app_bg.js  app_bg.wasm  app_bg.wasm.d.ts  global.css  index.html  main.js  package-lock.json  package.json
BlueHood app/src/: App.svelte  Main.svelte  bluehood.js
CLI app/: Cargo.toml
CLI app/src/: encryption.rs  file.rs  lib.rs  main.rs
algorithm/: Cargo.toml
algorithm/src/: convert.rs  encryption.rs  file.rs  main.rs
