[package]
name = "app"
version = "0.1.0"
authors = ["Elad Josef <eladyosef2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
aes = "0.6.0"
base64 = "0.13.0"
block-modes = "0.8.1"
hex-literal = "0.3.2"
magic-crypt = "3.1.8"
png = "0.16.8"
wasm-bindgen = "0.2.74"
